motorbil/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: 'aliimranutvikler'
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
    - name: web
      port: 80
      targetPort: http
