motorbil/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: 'aliimranutvikler'
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gateway
  hostnames:
    - whoami-aliimranutvikler.s9n.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami
          port: 80
